--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
   <head>
     <title>CS 1030 Web Page Project</title>
     <!-- Replace the content in the following line with your name. -->
-    <meta name="author" content="REPLACE WITH YOUR NAME">
+    <meta name="author" content="Adam">
   </head>
   <body>
     <!-- Replace the lines in this body with your content. -->
-    <h1>CS 1030 - Web page Project</h1>
+    <h1>39AF - Single Web App</h1>
     <img src="logo.png">
     <p>Hello world!</p>
+    <p>Hello?</p>
     <p><a href="secondpage.html">More</a></p>
   </body>
 </html>
