--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   
   <form action="/index.html">
     <label for="textbody">Text Body: </label>
-    <input type = "text" id = "textbody"> <br><br>
+    <input type = "text" id = "textbody"> 
 
-    <input type = "submit" value="Submit">
+    <input type = "submit" value="Submit"> <br><br>
 
     <label for = "output">Output: </label>
     <input type = "textbox" name = "output"></input>
