--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <label for = "output">Output: </label>
     <input type = "textbox" name = "output"></input>
+    <textarea id = "output" name = "output" rows = 2 cols = 50>
 
     <!-- in js: 
       perform calculation
