--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <input type = "submit" value="Submit"> <br><br>
 
     <label for = "output">Output: </label>
-    <input type = "textbox" name = "output"></input>
+    <!--<input type = "textbox" name = "output"></input>-->
     <textarea id = "output" name = "output" rows = 2 cols = 50></textarea>
 
   </form>
