--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <input type = "submit" value="Submit"> <br><br>
 
-    <label for = "output">Output: </label>
+    <label for = "output">Output: </label> <br>
     <!--<input type = "textbox" name = "output"></input>-->
     <textarea id = "output" name = "output" rows = 2 cols = 50></textarea>
 
