--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <h1>Word Recombiner</h1>
   
   <form action="/index.html">
-    <label for="textbody">Text Body: </label>
-    <input type = "text" id = "textbody"> 
+    <label for="textbody">Text Body: </label> <br>
+    <input type = "text" id = "textbody"> <br>
 
     <input type = "submit" value="Submit"> <br><br>
 
