Added repo link to page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
     <textarea id = "output" name = "output" rows = 2 cols = 50></textarea>
 
   </form>
-
 </body>
 
+
+
+<footer>
+     <a href="https://apkohl-kt.github.io/39AF_web/">Repository</a>
+</footer>
 
 </html>
