--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 <footer>
-     <a href="https://apkohl-kt.github.io/39AF_web/">Repository</a>
+     <a href="https://github.com/apkohl-kt/39AF_web">Repository</a>
 </footer>
 
 </html>
