--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+<style>
+     @font-face{
+          font-family: 'Lato Italic';
+          src: local('Lato Italic');
+     }
+     
+</style>
+
+     
 
 <head>
      <title>Word Recombiner</title>
