--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
     	body {
       		font-family: "Arial";
       		font-size: 20px;
-      		color: black;
+      		color: #302866; 
+    		background-color:#F1F0FC;       
     	}
+        h1 {
+        	text-align: center;
+        }
+        form {
+        	text-align: center;
+        }
+        footer {
+        	text-align: center;
+        }
 	</style>
-
 </head>
 
 
@@ -21,6 +30,8 @@
 <body>
 
 	<h1>Word Recombiner</h1>
+  
+  	<hr>
   
   	<form action="/index.html">
     	<label for="textbody">Text Body: </label> <br>
@@ -34,7 +45,7 @@
 	</form>
     
     
-    <br><br><br>
+    <br><br><br><br><br><br>
 </body>
 
 
