--- a/index.html
+++ b/index.html
@@ -12,42 +12,26 @@
       		color: #302866; 
     		background-color:#F1F0FC;       
     	}
-        h1 {
-        	text-align: center;
-        }
-        form {
-        	text-align: center;
-        }
-        footer {
-        	text-align: center;
-        }
+        h1 { text-align: center; }
+        form { text-align: center; }
+        footer { text-align: center; }
 	</style>
 </head>
 
 
-
-
 <body>
-
 	<h1>Word Recombiner</h1>
-  
-  	<hr>
-  
-  	<form action="/index.html">
+ 	<hr>
+  	<form id="form1" action="/index.html">
     	<label for="textbody">Text Body: </label> <br>
     	<input type = "text" id = "textbody"> <br>
-
     	<input type = "submit" value="Submit"> <br><br>
-
     	<label for = "output">Output: </label> <br>
     	<!--<input type = "textbox" name = "output"></input>-->
     	<textarea id = "output" name = "output" rows = 2 cols = 50></textarea>
 	</form>
-    
-    
     <br><br><br><br><br><br>
 </body>
-
 
 
 <footer>
