--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     	<!--<input type = "textbox" name = "output"></input>-->
     	<textarea id = "output" name = "output" rows = 2 cols = 50></textarea>
 	</form>
+
+	<br><br>
+    <b><i>To use: Enter a single word into the text body. The output will show how many possible recombinations of the letters can be made.</i></b>
+	
     <br><br><br><br><br><br>
 </body>
 
