--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         h1 { text-align: center; }
         form { text-align: center; }
         footer { text-align: center; }
+		body { text-align: center; }
 	</style>
 </head>
 
@@ -35,6 +36,8 @@
     <b><i>To use: Enter a single word into the text body. The output will show how many possible recombinations of the letters can be made.</i></b>
 	
     <br><br><br><br><br><br>
+
+	<script src="word_recombiner.js"></script>
 </body>
 
 
