--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                     </div>
                     <div class="field-group flex-1">
                         <label for="native-price-${entryCount}">Native Currency Price</label>
-                        <input type="text" id="native-price-${entryCount}" placeholder="e.g. 1500 yen">
+                        <input type="text" id="native-price-${entryCount}" placeholder="e.g. 15.80 GBP">
                     </div>
                 </div>
                 
@@ -429,7 +429,7 @@
                     </div>
                     <div class="field-group flex-1">
                         <label for="city-district-${entryCount}">City/District</label>
-                        <input type="text" id="city-district-${entryCount}" placeholder="e.g. Akihabara, Shibuya">
+                        <input type="text" id="city-district-${entryCount}" placeholder="e.g. London">
                     </div>
                 </div>
                 
